fixed the center alignment

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  /* height: 100%; */
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
   /* display: flex; */
@@ -7,15 +8,20 @@ body {
 }
 
 header {
-  text-align: center;
+  height: 10vh;
 }
 
 main {
   display: flex;
   flex-direction: column;
+  text-align: center;
+}
+
+.slider-container {
+  height: 80vh;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: center;
-  height: 100%;
 }
 
 .container {
@@ -25,11 +31,17 @@ main {
   justify-content: center;
 }
 
-/* .buttons {
+button {
+  width: 125px;
+}
+
+.headerFooter {
   display: flex;
-  justify-content: space-between;
-  width: 100%;
-} */
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
 
 #slider {
   display: flex;
@@ -43,15 +55,19 @@ main {
 
 #dog-image {
   max-width: 100%;
-  height: auto;
-  object-fit: contain;
+  height: 100%;
+  object-fit: fill;
 }
 
-.dogBreed {
+/* .dogBreed {
   text-align: center;
-}
+} */
 
 .prevButton,
 .nextButton {
   font-size: 50px;
+}
+
+footer {
+  height: 10vh;
 }
